containerized using docker v1.5